manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandagsmiddag-frontend
  namespace: mandagsmiddag
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
