manifests/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mandagsmiddag-frontend
  namespace: mandagsmiddag
spec:
  parentRefs:
    - name: cloudflared-gateway
      namespace: cloudflared
      group: gateway.networking.k8s.io
      kind: Gateway

  hostnames:
    - mandagsmiddag.no

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: mandagsmiddag-frontend
          port: 3000
          group: '' # for argocd diff
          kind: Service # for argocd diff
          weight: 1 # for argocd diff
