manifests/frontend/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-extauth
  namespace: mandagsmiddag
spec:
  extAuth:
    headersToExtAuth:
      - Authorization
      - Cookie
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
    http:
      backendRefs:
        - name: ak-outpost-mandagsmiddag
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version

  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mandagsmiddag-frontend

    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mandagsmiddag-backend
