manifests/frontend/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mandagsmiddag-frontend
  namespace: mandagsmiddag
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mandagsmiddag-frontend

  ingress:
    # Allow ingress from Traefik
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress: [] # no egress allowed
